[package]
name = "dupenukem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.10.1"
hex = "0.4.3"
inquire = "0.7.0"
log = "0.4.20"
pathdiff = "0.2.1"
regex = "1.10.2"
sha2 = "0.10.8"
size = "0.4.1"
thiserror = "2.0.17"
xxhash-rust = { version = "0.8.8", features = ["xxh3"] }

[dev-dependencies]
serial_test = "2.0.0"

